// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pretty html 1`] = `
Object {
  "Constructor": "Dummy",
  "Options": Object {
    "ID": "component",
    "containerSelector": "body",
    "label": "Link label",
    "types": Array [],
    "url": "127.0.0.1",
  },
  "html": "
<ul>
  <li>
    <a href=\\"127.0.0.1\\">Link label</a>
  </li>
</ul>
",
}
`;

exports[`pretty html 2`] = `
Object {
  "Constructor": "Dummy",
  "Options": Object {
    "ID": "component",
    "containerSelector": "body",
    "label": "Link label",
    "types": Array [],
    "url": "127.0.0.1",
  },
  "html": "
<ul>
  <li>
    <a href=\\"127.0.0.1\\">Link label</a>
  </li>
</ul>
",
}
`;

exports[`single file component 1`] = `
Object {
  "Constructor": "Panel",
  "Options": Object {
    "ID": "component",
    "containerSelector": "body",
    "content": "Default content",
    "title": "Default title",
    "types": Array [],
  },
  "html": "
<div>Default title</div>
<div>Default content</div>
",
}
`;

exports[`single file component 2`] = `
Object {
  "Constructor": "Panel",
  "Options": Object {
    "ID": "component",
    "containerSelector": "body",
    "content": "Custom content",
    "title": "Custom title",
    "types": Array [],
  },
  "html": "
<div>Custom title</div>
<div>Custom content</div>
",
}
`;

exports[`snapshot correctly 1`] = `
Object {
  "Constructor": "Link",
  "Options": Object {
    "ID": "component",
    "containerSelector": "body",
    "label": "Link label",
    "types": Array [],
    "url": "127.0.0.1",
  },
  "html": "<a href=\\"127.0.0.1\\">Link label</a>",
}
`;

exports[`snapshot correctly 2`] = `
Object {
  "Constructor": "Link",
  "Options": Object {
    "ID": "component",
    "containerSelector": "body",
    "label": "Link label",
    "types": Array [],
    "url": "127.0.0.1",
  },
  "html": "<a href=\\"127.0.0.1\\">Link label</a>",
}
`;

exports[`snapshot correctly 3`] = `
Object {
  "Constructor": "Link",
  "Options": Object {
    "ID": "component",
    "containerSelector": "body",
    "label": "Updated link label",
    "types": Array [],
    "url": "127.0.0.1",
  },
  "html": "<a href=\\"127.0.0.1\\">Updated link label</a>",
}
`;
